@@ -10,6 +10,7 @@ ikiwiki (2.64) UNRELEASED; urgency=low
     external dependency and is not commonly used. If you use otl, make sure
     you explicitly enable it now.
   * goodstuff: Add more, progress, and table plugins to the bundle.
+  * Improve error message if external plugin fails to load. Closes: #498458
 
  -- Joey Hess <joeyh@debian.org>  Mon, 08 Sep 2008 19:21:20 -0400
 
